CKA/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mysql 
spec:
 replicas: 1
 selector:
   matchLabels:
      app: mysql
 template:
   metadata:
     name: mysql 
     labels:
       app: mysql
   spec:
     containers:
     - name: mysql 
       image: quay.io/cprakash2118/rhel8-mysql-80
       ports:
       - containerPort: 3306
