CKA/service-reference.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: myapp
spec:
  selector:
    app: myapp 
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  type: ClusterIP
